macro(use_cxx11)
	if(CMAKE_VERSION VERSION_LESS "3.1")
		set(CMAKE_CXX_FLAGS "-std=c++11 ${CMAKE_CXX_FLAGS}")
	endif()
endmacro(use_cxx11)

use_cxx11()
cmake_minimum_required(VERSION 2.8.10)
project(home_project)
set(CMAKE_BUILD_TYPE Release)
set(CMAKE_INSTALL_RPATH "/usr/local/lib")
set(PROJECT_LINK_LIBS libboost_system.so libcurl.so pthread.so)
link_directories(/usr/local/lib/)
include_directories(src)
file(GLOB SOURCES "src/*.cpp")
add_executable(home_project ${SOURCES})
target_link_libraries(home_project ${PROJECT_LINK_LIBS})
message("${CMAKE_SOURCE_DIR}" "${CMAKE_BINARY_DIR}")
install(TARGETS home_project DESTINATION ${CMAKE_SOURCE_DIR}/bin)
